Added my socials

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Home Page</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Arhan's Website</h1>
+    <div class="Socials">
+      <p>My Socials</p>
+      <a href="https://www.instagram.com/">Instagram</a>
+      <a href="https://www.bu.edu/spark/students/work/">Spark!</a>
+    </div>
+    <h3>About Me:</h3>
+  </body>
 </html>
